--- a/cloudbuild-3_11.yaml
+++ b/cloudbuild-3_11.yaml
@@ -1,13 +1,8 @@
 steps:
   - id: 'pull image'
-    name: 'gcr.io/stargateio/stargate-builder:v1.0.6'
+    name: 'gcr.io/stargate-341420/stargate-builder:v1.0.6'
     entrypoint: 'bash'
     args: [ '-c', 'echo pulled builder' ]
-  - id: 'fetch_secret'
-    waitFor: [ '-' ]
-    name: gcr.io/cloud-builders/gcloud
-    entrypoint: 'bash'
-    args: [ '-c', "gcloud secrets versions access latest --secret=stargate-artifactory --format='get(payload.data)' | tr '_-' '/+' | base64 -d > /workspace/ci/custom-settings.xml" ]
   - id: 'fetch codacy secret'
     waitFor: [ '-' ]
     name: gcr.io/cloud-builders/gcloud
@@ -29,8 +24,8 @@ steps:
       - path: '/cache/.m2'
         name: 'm2_cache'
   - id: 'cassandra-3.11'
-    waitFor: [ 'fetch_secret', 'init_cache' ]
-    name: 'gcr.io/stargateio/stargate-builder:v1.0.6'
+    waitFor: [ 'init_cache' ]
+    name: 'gcr.io/stargate-341420/stargate-builder:v1.0.6'
     entrypoint: 'bash'
     args: [ 'ci/test.sh' ]
     volumes:
@@ -56,7 +51,7 @@ steps:
         name: 'm2_cache'
 
 substitutions:
-  _BUCKET: 'stargateio-github_cloudbuild'
+  _BUCKET: 'stargateio-github_cloudbuild_cmu'
 timeout: 14400s
 options:
   machineType: 'N1_HIGHCPU_32'
