--- a/sgv2-dynamo-api/pom.xml
+++ b/sgv2-dynamo-api/pom.xml
@@ -59,6 +59,11 @@
       <artifactId>sgv2-service-common</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.stargate.web</groupId>
+      <artifactId>restapi</artifactId>
+      <version>2.0.0-ALPHA-5-SNAPSHOT</version>
+    </dependency>
 
     <dependency>
       <groupId>com.amazonaws</groupId>
